test/driver/max_errors1.p
//# RUN: peony -fmax-errors=2 %s

% //~ ERROR: unexpected token, found '%'
% //~ ERROR: unexpected token, found '%'
% // max errors reached, no diagnostic printed for this
